--- a/cliente-registro.html
+++ b/cliente-registro.html
@@ -88,6 +88,17 @@
       <label for="confirmar">Confirma tu contraseña:</label>
       <input id="confirmar" name="confirmar" type="password" required />
 
+      <!-- ── NUEVOS CAMPOS DE SERVICIO ── -->
+      <h3>Datos del Servicio</h3>
+      <label for="medidor">Número de Medidor:</label>
+      <input id="medidor" name="medidor" type="text" required />
+
+      <label for="num_contrato">Número de Contrato:</label>
+      <input id="num_contrato" name="num_contrato" type="text" required />
+
+      <label for="num_servicio">Número de Servicio:</label>
+      <input id="num_servicio" name="num_servicio" type="text" required />
+
       <!-- ── Fecha de nacimiento ── -->
       <h3>Fecha de nacimiento</h3>
       <input name="dia"  type="number" placeholder="Día"  min="1"  max="31"  required />
