--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Iniciar Sesión – CFE</title>
-
+  <title>Iniciar Sesión - CFE</title>
   <link rel="stylesheet" href="css/styles.css" />
-
   <style>
-    #vanta-bg{position:fixed; inset:0; width:100%; height:100%; z-index:-1;}
-    body{overflow:hidden;}
+    #vanta-bg{position:fixed;inset:0;z-index:-1}
+    body{overflow:hidden}
   </style>
 </head>
 <body>
-  <!-- Fondo animado -->
   <div id="vanta-bg"></div>
 
-  <!-- Encabezado -->
   <header class="encabezado">
     <img src="img/logo.png" alt="Logo CFE" class="logo-cfe" />
   </header>
 
-  <!-- Contenedor login -->
   <main class="login-container">
     <h2>Iniciar Sesión</h2>
 
-    <form id="form-login">
-      <input id="correo"     name="correo"     type="email"    placeholder="Correo electrónico" required />
-      <input id="contrasena" name="contrasena" type="password" placeholder="Contraseña"         required />
+    <!-- SIN action ni method -->
+    <form id="formLogin">
+      <!-- Correo -->
+      <input type="email" id="correo" placeholder="correo@ejemplo.com"
+             required
+             pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+             title="Ingresa un correo válido">
+
+      <!-- Contraseña -->
+      <input type="password" id="contrasena" placeholder="••••••••"
+             required
+             pattern="^(?!.*[ .,])(?!.*\\s).{6,32}$"
+             title="6‑32 caracteres sin espacios, puntos ni comas">
+
       <button type="submit" class="btn">Entrar</button>
     </form>
 
@@ -36,28 +42,50 @@
     </div>
   </main>
 
-  <footer>
-    <p>© 2025 Sistema CFE | Todos los derechos reservados</p>
-  </footer>
+  <footer><p>© 2025 Sistema CFE | Todos los derechos reservados</p></footer>
 
   <!-- Vanta Globe -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <script>
     VANTA.GLOBE({
-      el:"#vanta-bg",
-      mouseControls:true,
-      touchControls:true,
-      minHeight:200,
-      minWidth:200,
-      color:0x00ff99,
-      color2:0x003f2f,
-      backgroundColor:0x000000,
-      size:1.2
+      el:"#vanta-bg", mouseControls:true, touchControls:true,
+      minHeight:200, minWidth:200, color:0x00ff99, color2:0x003f2f,
+      backgroundColor:0x000000, size:1.2
     });
   </script>
 
-  <!-- Lógica de frontend -->
-  <script src="main.js"></script>
+  <!-- Login JS -->
+  <script>
+  const form = document.getElementById('formLogin');
+  form.addEventListener('submit', async e => {
+    e.preventDefault();
+
+    const correo     = document.getElementById('correo').value.trim();
+    const contrasena = document.getElementById('contrasena').value.trim();
+
+    // validación extra de contraseña
+    const passOk = /^(?!.*[ .,])(?!.*\s).{6,32}$/.test(contrasena);
+    if (!passOk) return alert('La contraseña no cumple los requisitos.');
+
+    try {
+      const res  = await fetch('http://localhost:3000/api/login', {
+        method : 'POST',
+        headers: {'Content-Type':'application/json'},
+        body   : JSON.stringify({ correo, contrasena })
+      });
+      const data = await res.json();
+
+      if (res.ok) {
+        location.href = 'cliente-inicio.html';
+      } else {
+        alert(data.mensaje);   // correo no registrado o contraseña incorrecta
+      }
+    } catch (err) {
+      console.error(err);
+      alert('Error de conexión con el servidor');
+    }
+  });
+  </script>
 </body>
 </html>
