--- a/index.html
+++ b/index.html
@@ -3,89 +3,116 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Iniciar Sesión - CFE</title>
+  <title>Iniciar Sesión – CFE</title>
+
   <link rel="stylesheet" href="css/styles.css" />
+
   <style>
-    #vanta-bg{position:fixed;inset:0;z-index:-1}
-    body{overflow:hidden}
+    #vanta-bg {
+      position: fixed;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+    body {
+      overflow: hidden;
+    }
+    .campo-password {
+      position: relative;
+    }
+    .campo-password button {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .icono-ojo {
+      width: 20px;
+      height: 20px;
+      fill: white;
+    }
   </style>
 </head>
 <body>
+  <!-- Fondo animado -->
   <div id="vanta-bg"></div>
 
+  <!-- Encabezado -->
   <header class="encabezado">
     <img src="img/logo.png" alt="Logo CFE" class="logo-cfe" />
   </header>
 
+  <!-- Contenedor login -->
   <main class="login-container">
     <h2>Iniciar Sesión</h2>
 
-    <!-- SIN action ni method -->
-    <form id="formLogin">
-      <!-- Correo -->
-      <input type="email" id="correo" placeholder="correo@ejemplo.com"
-             required
-             pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-             title="Ingresa un correo válido">
+    <form id="form-login">
+      <input id="correo" name="correo" type="email" placeholder="Correo electrónico" required />
 
-      <!-- Contraseña -->
-      <input type="password" id="contrasena" placeholder="••••••••"
-             required
-             pattern="^(?!.*[ .,])(?!.*\\s).{6,32}$"
-             title="6‑32 caracteres sin espacios, puntos ni comas">
+      <div class="campo-password">
+        <input id="contrasena" name="contrasena" type="password" placeholder="Contraseña" required />
+        <button type="button" onclick="togglePassword('contrasena', this)" aria-label="Mostrar/Ocultar">
+          <svg class="icono-ojo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 13a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/>
+            <circle cx="12" cy="12" r="2.5"/>
+          </svg>
+        </button>
+      </div>
 
       <button type="submit" class="btn">Entrar</button>
     </form>
+
+    <!-- Enlace olvidar contraseña -->
+    <div class="link-recuperar">
+      <a href="recuperar-contrasena.html">¿Olvidaste tu contraseña?</a>
+    </div>
 
     <div class="crear-cuenta">
       <p>¿No tienes cuenta? <a href="cliente-registro.html">Crear una cuenta</a></p>
     </div>
   </main>
 
-  <footer><p>© 2025 Sistema CFE | Todos los derechos reservados</p></footer>
+  <footer>
+    <p>© 2025 Sistema CFE | Todos los derechos reservados</p>
+  </footer>
 
   <!-- Vanta Globe -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <script>
     VANTA.GLOBE({
-      el:"#vanta-bg", mouseControls:true, touchControls:true,
-      minHeight:200, minWidth:200, color:0x00ff99, color2:0x003f2f,
-      backgroundColor:0x000000, size:1.2
+      el: "#vanta-bg",
+      mouseControls: true,
+      touchControls: true,
+      minHeight: 200,
+      minWidth: 200,
+      color: 0x00ff99,
+      color2: 0x003f2f,
+      backgroundColor: 0x000000,
+      size: 1.2
     });
   </script>
 
-  <!-- Login JS -->
+  <!-- Mostrar/Ocultar contraseña -->
   <script>
-  const form = document.getElementById('formLogin');
-  form.addEventListener('submit', async e => {
-    e.preventDefault();
-
-    const correo     = document.getElementById('correo').value.trim();
-    const contrasena = document.getElementById('contrasena').value.trim();
-
-    // validación extra de contraseña
-    const passOk = /^(?!.*[ .,])(?!.*\s).{6,32}$/.test(contrasena);
-    if (!passOk) return alert('La contraseña no cumple los requisitos.');
-
-    try {
-      const res  = await fetch('http://localhost:3000/api/login', {
-        method : 'POST',
-        headers: {'Content-Type':'application/json'},
-        body   : JSON.stringify({ correo, contrasena })
-      });
-      const data = await res.json();
-
-      if (res.ok) {
-        location.href = 'cliente-inicio.html';
+    function togglePassword(id, btn) {
+      const input = document.getElementById(id);
+      const svg = btn.querySelector("svg");
+      if (input.type === "password") {
+        input.type = "text";
+        svg.innerHTML = `<path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 13a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/><circle cx="12" cy="12" r="2.5"/>`;
       } else {
-        alert(data.mensaje);   // correo no registrado o contraseña incorrecta
+        input.type = "password";
+        svg.innerHTML = `<path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5z"/><path d="M2 2l20 20"/>`;
       }
-    } catch (err) {
-      console.error(err);
-      alert('Error de conexión con el servidor');
     }
-  });
   </script>
+
+  <!-- Lógica de frontend -->
+  <script src="main.js"></script>
 </body>
 </html>
